--- a/AppClientCerisaie/web/resources/css/myCSS.css
+++ b/AppClientCerisaie/web/resources/css/myCSS.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     align-items: stretch;
+    justify-content: center;
+    margin: 75px 150px;
 }
 .card {
     flex: 0 0 200px;
